--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "crypto": "^1.0.1",
+    "micro": "^10.0.1",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18"
